remove right overflow on profile questionnaire. fixes #132.

--- a/app/static/sass/_profile.scss
+++ b/app/static/sass/_profile.scss
@@ -87,8 +87,6 @@
 
 .b-profile-questionnaire {
     padding: 30px 0;
-    width: 100vw;
-    overflow-x: scroll;
 
     .e-questions-container {
         white-space: nowrap;
@@ -96,7 +94,7 @@
     }
 
     .e-question {
-        width: 100vw;
+        width: 100%;
         white-space: normal;
         display: inline-block;
     }
